Cap2025/src/edu/najah/cap/advance/examples/exc3/correct/ToLowerCaseFilter.java
package edu.najah.cap.advance.examples.exc3.correct;

public class ToLowerCaseFilter implements Filter {

    public String applyFilter(String result) {
        return result.toLowerCase();//first filter
    }
}
